force-app/main/default/objects/Students__c/Students__c.object-meta.xml
<CustomObject>
    <label>Students</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>