force-app/main/default/objects/Students__c/fields/Church__c.field-meta.xml
<CustomField>
    <fullName>Church__c</fullName>
    <label>Church</label>
    <type>TextArea</type>
</CustomField>