force-app/main/default/objects/Students__c/fields/Course_A__c.field-meta.xml
<CustomField>
    <fullName>Course_A__c</fullName>
    <label>Course A</label>
    <type>TextArea</type>
</CustomField>