force-app/main/default/objects/Students__c/fields/Course_B__c.field-meta.xml
<CustomField>
    <fullName>Course_B__c</fullName>
    <label>Course B</label>
    <type>TextArea</type>
</CustomField>