force-app/main/default/objects/Students__c/fields/Ministry__c.field-meta.xml
<CustomField>
    <fullName>Ministry__c</fullName>
    <label>Ministry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>