force-app/main/default/objects/Students__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>Course_A__c</columns>
    <columns>Course_B__c</columns>
    <columns>Church__c</columns>
    <columns>Ministry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>